# CV-Sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  clean.sh  configure-jetson-nano.sh  imgui.ini  install-libraries.bat  setup-jetson-nano.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
CMake/macros/: colors.cmake  get_3rd_party_libraries.cmake  libhelpers.cmake  subdirlist.cmake
docs/: CMakeLists-template.txt  setup.md
media/: block.blend  block.mtl  german-shepherd-pointcloud.ply
media/shaders/: bigpoints.vert  flat_shader.vert  mvp_transform.vert  passthrough.frag  passthrough.vert  pointcloud.frag  pointcloud.vert  texture.frag  textured_mvp_transform.vert  vertexshifter.vert
scripts/: clean.sh  install-libraries.bat
src/: CMakeLists.txt
src/01-Hello-World/: CMakeLists.txt  CV-Sandbox.cpp  readme.md
src/01-HelloWorld/: CMakeLists.txt  CV-Sandbox.cpp
src/02-Hello-GLFW/: CMakeLists.txt  main.cpp  main.h  readme.md
src/02-HelloGLFW/: readme.md
src/03-Hello-ImGui/: CMakeLists.txt  main.cpp  readme.md
src/04-GLFW-and-OpenCV/: CMakeLists.txt  main.cpp  readme.md
src/05-OpenCV-and-ImGui/: CMakeLists.txt  main.cpp  main.h  readme.md
src/06-Raytracing-in-One-Weekend/: CMakeLists.txt  app.cpp  app.h  main.cpp  readme.md  renderer.cpp  renderer.h  ui.cpp  ui.h
src/06-Raytracing-in-One-Weekend/raytracing/: cpu_raytracer_1.cpp  cpu_raytracer_1.h  cpu_raytracer_2.cpp  cpu_raytracer_2.h  generic_cpu_raytracer.h  raytracers.h  raytracing_utils.h  raytracingutils.h  simpleCPURenderer.cpp  simpleCPURenderer.h  simple_cpu_renderer.cpp  simple_cpu_renderer.h
src/06-Raytracing-in-One-Weekend/raytracing/raytracers/: CPUraytracer1.cpp  CPUraytracer1.h  CPUraytracer2.cpp  CPUraytracer2.h  genericCPUtracer.h  raytracers.h
src/06-Raytracing-in-One-Weekend/raytracing/util/: camera.h  hittable.h  hittable_list.cpp  hittable_list.h  ray.h  rotMat.h  rot_math.h  vec2.h  vec3.h
src/06-Raytracing-in-One-Weekend/raytracing/util/primitives/: hittable_list.h  sphere.cpp  sphere.h
src/07-Hello-CUDA/: CMakeLists.txt  HelloCUDA.cu  HelloCUDA.h  readme.md
src/08-CUDA-and-OpenGL/: CMakeLists.txt  cuda_check_error.h  main.cu  readme.md  timer.h
src/08-OpenCV-Video-Template/: CMakeLists.txt  main.h  mat_viewer.cpp  mat_viewer.h  optical_flow_cpu.cpp  optical_flow_cpu.h  readme.md  ui.cpp  video_viewer.h
src/08-OpenCV-Video-Template/algorithms/optical_flow/: optical_flow.cpp  optical_flow.h  optical_flow_ui.h
src/08-OpenCV-Video-Template/util/: vec3.h
src/09-OpenCV-Video-Template/: CMakeLists.txt  app.cpp  app.hpp  main.cpp  main.hpp  mat_viewer.cpp  mat_viewer.hpp  readme.md  testMatToGLTex.cu  testSurfaceDestruction.cu  ui.cpp  ui.h  ui.hpp  video_viewer.cpp  video_viewer.hpp
src/09-OpenCV-Video-Template/algorithms/: cuda_algorithm.cpp  cuda_algorithm.cu  cuda_algorithm.cuh  cuda_algorithm.hpp
src/09-OpenCV-Video-Template/algorithms/dummy/: dummy_cuda_algorithm.cu  dummy_cuda_algorithm.cuh
src/09-OpenCV-Video-Template/algorithms/dummy/old/: optical_flow.cpp  optical_flow.hpp  optical_flow_ui.cpp  optical_flow_ui.hpp
src/09-OpenCV-Video-Template/algorithms/optical_flow/: optical_flow.cpp  optical_flow.h  optical_flow.hpp  optical_flow_ui.cpp
src/09-OpenCV-Video-Template/util/: vec3.hpp
src/10-Convolution-Benchmark/: CMakeLists.txt  conv4D.c  conv4D.h  conv4D_data_structures.h  conv4D_impl.h  conv4D_impl_CPU.c  conv4D_impl_GPU.cu  featuremap.c  featuremap.h  main.c  readme.md
src/10-Convolution-Benchmark/dynamic_scratch/: CMakeLists.txt  conv4D.c  conv4D.h  conv4D_impl_CPU.c  featuremap.c
src/10-Convolution-Static/: CMakeLists.txt  conv4D_data_structures.c  conv4D_data_structures.h  conv4D_impl.h  conv4D_impl_CPU.c  conv4D_impl_GPU.cu  main.c
src/10-Convolution-Static/dynamic_scratch/: featuremap.h  main.c
src/11-GL_Game/: CMakeLists.txt  main.cpp  readme.md  utils.cpp  utils.h
src/11-GL_Game/behavior/: gameObject.cpp  gameObject.h  world.cpp  world.h
src/11-GL_Game/behavior/gameObjects/: objFileObject.cpp  objFileObject.h  test_cube.cpp  test_cube.h  test_triangle.cpp  test_triangle.h
src/11-GL_Game/behavior/worlds/: w1_triangle.h  w2_cube.h  w3_objects.h  w4_wysiwyg.h
src/11-GL_Game/engine/: renderer.cpp  renderer.h  shader.cpp  shader.h
src/12-ICP/: CMakeLists.txt  main.cpp
src/12-ICP/app/: GUI.cpp  GUI.hpp  property.hpp  window.cpp  window.hpp
src/12-ICP/pointcloud/: icp.hpp  kdtree.cpp  kdtree.hpp  point.hpp  pointcloud.cpp  pointcloud.hpp  renderer.cpp  renderer.hpp
